--- a/client/assets/variables.scss
+++ b/client/assets/variables.scss
@@ -1,4 +1,16 @@
-// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
+$blue: #014983;
+$blue_hover:  #005ba5;
+$green: #006100;
+$green_hover:  #009100;
+
+@mixin tablet {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media screen and (max-width: 320px) {
+        @content;
+    }
+}
